# aidoc-flow-iplan-standard

./: .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  GOVERNANCE.md  HANDOFF.md  README.md  ROADMAP.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  docs-sync.json  labeler.yml  pull_request_template.md
.github/workflows/: ai-review.yml  audit-trail.yml  auto-merge-ai-prs.yml  composition.yml  conformance.yml  docs-sync.yml  labeler.yml  links.yml  markdown-lint.yml  pre-commit.yml  secret-scan.yml  standards-drift.yml
docs/adr/: ADR-0001_exchange-storage-independent-of-execution-ledger.md
docs/standards/: DATA-INTERCHANGE.md  IPLAN-ASSURANCE.md  IPLAN-CANONICALIZATION.md  IPLAN-DEFINITIONS.md  IPLAN-ECOSYSTEM.md  IPLAN-MANAGEMENT.md  IPLAN-STANDARD.md  PLAN-INGESTION-ADAPTERS.md  TRANSPORT-INTEGRATION.md  VERSIONING.md
plans/: PLAN-0001_docs-review-remediation.md  README.md
schemas/: artifact.schema.json  execution-event.schema.json  executor-registration.schema.json  iplan-chain-record.schema.json  iplan-chain-version.schema.json  iplan-chain.schema.json  iplan-comparison.schema.json  iplan-document.schema.json  iplan-evidence-bundle.schema.json  iplan-execution-record.schema.json  iplan-import-result.schema.json  iplan-lifecycle-event.schema.json  iplan-record.schema.json  iplan-validation-report.schema.json  iplan-version.schema.json  task.schema.json  tmp-iplan.schema.json
scripts/: pre_push_check.sh
tests/contract/: __init__.py  test_canonicalization.py  (+4 more)
(+32 files in other folders)
